Sun Feb 01 10:54:30 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix typo thanks to Daniel Nylander

Sun Feb 01 00:11:32 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: do Runge-Kutta instead of Euler for the graphical
	  slopefield solver.  Whack VectorfieldCPlot (never implemented,
	  should not be a separate function anyway).  Implement
	  VectorfieldPlot and SlopefieldPlot.

	* help/C/genius.xml, help/C/gel-function-list.xml: update for all
	  the new changes

Sat Jan 31 18:44:38 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: resolve some GtkExtra nonsense (dx and dy for flux
	  are specified in pixels, that is some serious crack!) so that
	  slope/vector fields draw correctly in non-aspect zoom.  Implement
	  the "clear solutions" functions and included a GUI.  Implement
	  a solver dialog and implement "clicky-solutions" when the dialog
	  is ON.

Sat Jan 31 09:42:58 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/mpwrap.c: it turns out the gmp cmp functions can return other
	  values than -1,0,1.  So normalize on the mpw_cmp* level.  This
	  broke for loops that started at negative numbers.

	* src/geniustests.txt: add some tests for the for loops starting at
	  negative values

	* src/graphing.c: fixup the tick size for slopefield and vectorfield
	  Implement stubs for the GEL interface to all of these, allow
	  setting the increment in SlopefieldDrawSolution

	* src/calc.h: update the COPYRIGHT_STRING

Fri Jan 30 18:30:30 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix some leaks.  Implement a simple euler method
	  graphical solver for the slopefield.  Currently it is only
	  accessible by a temporary function just to see if it works.  It
	  needs a proper interface and also a UI interface.
	  Slopefield/Vectorfield do not yet have proper GEL interface either

Mon Jan 26 23:59:06 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Finish the GUI plotting of vectorfield and