@@ -1,3 +1,11 @@
+Mon Feb 02 01:11:11 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: fix the plot scale precision (especially for y).  
+	  When we just click on the plot do zoom in instead of zoom into an
+	  incredibly small window.  And finally make the create plot window
+	  usable on a netbook by adding a scrollwindow on small screens
+	  for the lineplot tab.
+
 Sun Feb 01 10:54:30 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: fix typo thanks to Daniel Nylander
